--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Longpengu">
+<meta name="description" content="Long Pengu">
 <meta name="author" content="Thibault Jan Beyer and Lucas Beyer">
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="Who's got the longest??">
 <meta name="twitter:description" content="See how long your longpengu can go!">
 <meta name="twitter:image" content="../v34cgjtcne2h.wtf/assets/img/logo.jpg">
-<title>Longpengu</title>
+<title>Long Pengu</title>
 
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 <style>
